services/setup-service/src/main/resources/k8s/procurement-namespace/procurement-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: procurement-service-ingress
  namespace: procurement
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: api.gindho.com
    http:
      paths:
      - path: /procurement
        pathType: Prefix
        backend:
          service:
            name: procurement-service
            port:
              number: 9021
